feat(movies): add GetMovieDetail endpoint
