# routers/movies.go
@@ -9,4 +9,5 @@ import (
 func movieRouters(r *gin.RouterGroup) {
 	r.GET("/now-showing", c.GetNowShowingMoviesHandler)
 	r.GET("/up-coming", c.GetUpComingMoviesHandler)
+	r.GET("/:id", c.GetMovieDetailHandler)
 }
